src/pages/projectsPage/projectPage.css
/*	Variabili per i colori */
:root {
	--bg-color: #242424;
	--category-bg-color: #8e8d8d37;
	--overlay-bg-color: #1a1a1a;
	--overlay-border-color: #606060;
}

.projectsPage {
	display: flex;
	gap: 20px 1vw;
	margin-left: 2vw;
	flex-wrap: wrap;
	justify-content: left;
	align-items: flex-start;
	background-color: var(--bg-color);
}

.category {
	min-width: 320px;
	width: 19vw;
	background: var(--category-bg-color);
	border-radius: 2px;
}

.category > p {
	display: flex;
	align-items: center;
}

.category-title {
	display: inline-block;
	margin-left: 1.5%;
	font-weight: 500;
}

.category-count {
	margin-left: 5px;
	font-weight: 200;
}

.expandable-arrow {
	margin-right: 10px;
	margin-left: auto;
}

.cards-container {
	overflow: hidden;
	transition: max-height 0.4s ease, opacity 0.3s ease;
}

.cards-container.expanded {
	max-height: 2000px;
	opacity: 1;
}

.cards-container.collapsed {
	max-height: 0;
	opacity: 0;
}

.project-card {
	background: var(--bg-color);
	height: 250px;
	width: 98%;
	margin-left: 1%;
	border-radius: 2px;
	margin-bottom: 6px;
}

.project-card h3 {
	font-size: 25px;
}

.project-description {
	display: -webkit-box;
	-webkit-line-clamp: 2;
	-webkit-box-orient: vertical;
	overflow: hidden;
	text-overflow: ellipsis;
	font-weight: 300;
}

.project-detail-overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background: rgba(0, 0, 0, 0.5);
	z-index: 100;
}

.project-detail {
	display: grid;
	grid-template-columns: 2fr 1fr;
	position: fixed;
	background: var(--overlay-bg-color);
	padding: 30px;
	border-radius: 8px;
	transition: all 0.4s ease;
	overflow: hidden;
	opacity: 0;
}

.project-detail.expanding {
	top: 10vh !important;
	left: 16vw !important;
	width: 83vw !important;
	height: 85vh !important;
	opacity: 1;
	border: 1px solid var(--overlay-border-color);
}

.project-info {
	display: flex;
	flex-wrap: wrap;
	align-content: flex-start;
	border-right: 1px solid var(--overlay-border-color);
}

.title-owner-row {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	width: 100%;
}

.project-detail h2 {
	font-size: 50px;
	margin: 0;
}

.owner-info {
	display: -webkit-box;
	-webkit-line-clamp: 1;
	-webkit-box-orient: vertical;
	overflow: hidden;
	text-overflow: ellipsis;
	min-width: 200px;
	max-width: 350px;
	margin-right: 20px;
	margin-left: auto;
	background-color: rgb(172, 134, 0);
	text-align: center;
	border-radius: 5px;
	font-size: 20px;
}

.project-detail button {
	margin-top: 20px;
	padding: 8px 20px;
	cursor: pointer;
	border: 1px solid white;
	background: transparent;
	color: white;
	border-radius: 4px;
	margin-right: 50px;
}

.description-row {
	width: 100%;
	min-height: 100px;
	max-height: 200px;
	margin-top: 30px;
	margin-left: 10px;
	font-size: 20px;
	font-weight: 200;
}

.overlay-btn {
	
}

